--- a/package.json
+++ b/package.json
@@ -2,22 +2,43 @@
   "name": "my-react-project",
   "version": "0.0.0",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^27.0.3",
     "ethers": "^5.5.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
+    "typescript": "^4.5.2",
     "vite": "^2.5.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
