--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@types/jest": "^27.0.3",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -42,3 +44,4 @@
     ]
   }
 }
+
