--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,17 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "noImplicitAny": true,
     "types": [
       "vite/client"
     ],
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true
   },
   "include": [
-    "./src"
+    "./src",
+    "custom.d.ts"
   ]
 }
