--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@types/jest": "^27.0.3",
+    "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
@@ -44,4 +46,3 @@
     ]
   }
 }
-
