--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,17 +12,18 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "strictNullChecks": false,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    // "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "types": [
       "vite/client"
     ],
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true
   },
   "include": [
     "./src"
