modified package name and scripts

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "my-react-project",
+	"name": "RGETHConverter",
 	"version": "0.0.0",
 	"scripts": {
 		"start": "react-scripts start",
-		"dev": "vite",
 		"build": "react-scripts build",
-		"serve": "vite preview"
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"dependencies": {
 		"@types/jest": "^27.0.3",
