--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
 		"@types/react-dom": "^17.0.11",
 		"@types/styled-components": "^5.1.16",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
-		"typescript": "^4.5.2",
-		"vite": "^2.5.4"
+		"typescript": "^4.5.2"
 	},
 	"eslintConfig": {
 		"extends": [
